# TransformerEngine

./: README.md  setup.py
onnx_export/: export_cast_ops.py  export_gelu.py  export_gemm.py  export_layernorm.py  export_linear_layer.py  te_onnx_extensions.py  test_custom_onnx_export.py  test_layernorm_fwd_fp8_export.py  test_softmax_exports.py  test_te_gemm_export.py
qa/L0_unittest/: test.sh
tests/: test_core_attention.py  test_onnx_export.py  test_softmax.py
transformer_engine/pytorch/: __init__.py  cpp_extensions.py  module.py  softmax.py  te_onnx_extensions.py
transformer_engine/pytorch/csrc/: common.h  extensions.cu  extensions.h  ts_fp8_op.cpp
transformer_engine/pytorch/torchscript/: README.md  te_onnx_extensions.py  test_custom_onnx_export.py
transformer_engine/pytorch/torchscript/te_custom_ops/: CMakeLists.txt  custom_fp8_ops.cpp  setup.py
